--- a/Assets/css/style.scss
+++ b/Assets/css/style.scss
@@ -2,7 +2,7 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  font-family: "Space Grotesk", sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
 }
@@ -44,7 +44,7 @@ header {
         font-size: 1.3rem;
         color: #33354d;
         margin-inline-start: 1rem;
-        font-family: "Manrope";
+        font-family: Arial, Helvetica, sans-serif;
         font-weight: 500;
         &:hover {
           color: #617cec;
@@ -429,7 +429,7 @@ header {
   align-items: center;
   gap: 30px;
   background-color: #f3f6ff;
-  padding: 5rem 2rem;
+  padding: 4rem 1rem;
   border-radius: 10px;
   @media (max-width: 993px) {
     display: block;
@@ -443,9 +443,12 @@ header {
   margin: 15px;
   h6 {
     color: #0b0f19;
-    font-size: 1.5rem;
+    font-size: 1.4rem;
     font-weight: 600;
     margin: 5px;
+    @media (max-width: 993px) {
+      font-size: 0.8rem;
+    }
   }
 }
 
