--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -24,7 +24,7 @@ header {
 .main {
   display: flex;
   flex-direction: column;
-  gap: 80px;
+  gap: 40px;
 }
 
 .navbar {
@@ -89,25 +89,24 @@ header {
 }
 .Head h1 {
   font-size: 2.5rem;
-  margin-bottom: 1.2rem;
+  margin-bottom: 0.9rem;
   font-weight: 600;
-  line-height: 1.3;
   color: #0b0f19;
 }
 .Head p {
-  margin-bottom: 3rem;
+  margin-bottom: 1.5rem;
   color: #565973;
-  font-size: 1.2rem;
+  font-size: 1.3rem;
   font-family: "Manrope", sans-serif;
 }
 .Head .Discover {
-  padding: 3rem;
   text-decoration: none;
   font-size: 1.5rem;
   color: #33354d;
   display: flex;
   align-items: center;
   gap: 12px;
+  margin: 1rem 0rem;
 }
 .Head .Discover span {
   width: 40px;
@@ -121,7 +120,7 @@ header {
 }
 .Head .Images {
   display: flex;
-  justify-content: space-evenly;
+  gap: 25px;
 }
 .Head .Images img {
   width: 40%;
@@ -189,6 +188,11 @@ header {
   gap: 8px;
   padding: 10px;
 }
+@media (max-width: 993px) {
+  .App_Features .Feature_items .item_Box {
+    display: block;
+  }
+}
 .App_Features .Feature_items .item_Box .img {
   padding: 10px;
   background-color: #f3f6ff;
@@ -197,6 +201,9 @@ header {
 .App_Features .Feature_items .item_Box .img svg {
   text-align: center;
 }
+.App_Features .Feature_items .item_Box .title {
+  margin: 8px 0px;
+}
 .App_Features .Feature_items .item_Box .title h3 {
   font-size: 2rem;
   font-weight: 600;
@@ -204,14 +211,17 @@ header {
 @media (max-width: 993px) {
   .App_Features .Feature_items .item_Box .title h3 {
     font-size: 1rem;
+    text-align: center;
   }
 }
 .App_Features .Feature_items .item_Box .title p {
   font-size: 1rem;
+  color: #565973;
 }
 @media (max-width: 993px) {
   .App_Features .Feature_items .item_Box .title p {
     font-size: 0.7rem;
+    text-align: center;
   }
 }
 @media (max-width: 993px) {
@@ -382,10 +392,6 @@ header {
   font-size: 1rem;
   color: #565973;
   background-color: #fff;
-}
-
-.Subscribe {
-  padding: 2rem;
 }
 
 .sub_box {
@@ -593,7 +599,7 @@ p {
 }
 .swiper-slide p {
   font-size: 0.9rem;
-  padding: 8px 0;
+  padding: 8px;
 }
 
 .swiper_frame {
