--- a/Assets/css/style.scss
+++ b/Assets/css/style.scss
@@ -12,6 +12,7 @@ body {
   flex-direction: column;
   gap: 6rem;
 }
+
 header {
   background-color: #fefefe;
   position: sticky;
@@ -23,7 +24,7 @@ header {
 .main {
   display: flex;
   flex-direction: column;
-  gap: 80px;
+  gap: 40px;
 }
 
 .navbar {
@@ -96,25 +97,24 @@ header {
   }
   h1 {
     font-size: 2.5rem;
-    margin-bottom: 1.2rem;
+    margin-bottom: 0.9rem;
     font-weight: 600;
-    line-height: 1.3;
     color: #0b0f19;
   }
   p {
-    margin-bottom: 3rem;
+    margin-bottom: 1.5rem;
     color: #565973;
-    font-size: 1.2rem;
+    font-size: 1.3rem;
     font-family: "Manrope", sans-serif;
   }
   .Discover {
-    padding: 3rem;
     text-decoration: none;
     font-size: 1.5rem;
     color: #33354d;
     display: flex;
     align-items: center;
     gap: 12px;
+    margin: 1rem 0rem;
     span {
       width: 40px;
       height: 40px;
@@ -128,7 +128,7 @@ header {
   }
   .Images {
     display: flex;
-    justify-content: space-evenly;
+    gap: 25px;
     img {
       width: 40%;
     }
@@ -204,6 +204,10 @@ header {
       align-items: start;
       gap: 8px;
       padding: 10px;
+      @media (max-width: 993px) {
+        display: block;
+      }
+
       .img {
         padding: 10px;
         background-color: #f3f6ff;
@@ -213,21 +217,22 @@ header {
         }
       }
       .title {
-        @media (max-width: 993px) {
-        }
-
+        margin: 8px 0px;
         h3 {
           font-size: 2rem;
           font-weight: 600;
 
           @media (max-width: 993px) {
             font-size: 1rem;
+            text-align: center;
           }
         }
         p {
           font-size: 1rem;
+          color: #565973;
           @media (max-width: 993px) {
             font-size: 0.7rem;
+            text-align: center;
           }
         }
       }
@@ -421,7 +426,6 @@ header {
 
 //Subscribe
 .Subscribe {
-  padding: 2rem;
 }
 
 .sub_box {
@@ -636,7 +640,7 @@ p {
   }
   p {
     font-size: 0.9rem;
-    padding: 8px 0;
+    padding: 8px;
   }
 }
 
